@@ -10,6 +10,8 @@ Bug fixes:
     read-only mode.
   * The function 'Delete Selected Events' is now disabled when Timeline is in 
     read-only mode.
+  * The function 'Create Period Event' is now disabled when Timeline is in 
+    read-only mode.
 
 
 Timeline 0.19.0, released on 30 December 2012
